# bg-remove-wpd

./: README.md  pyproject.toml
src/removebg_square/: cli.py  core.py  xmp.py
