[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "removebg-square-cli"
version = "0.1.1"
description = "Batch normalize images, remove background via remove.bg, then center on a square canvas."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sofia" }]

dependencies = [
  "Pillow>=10.0.0",
  "numpy>=1.24",
  "requests>=2.31",
  "rawpy>=0.20",
  "typer>=0.12",
  "rich>=13.0",
  "keyring>=25.0",
]

[project.optional-dependencies]
keyring = ["keyring>=25.0"]

[project.scripts]
removebg-square = "removebg_square.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/removebg_square"]